# rootproj

./: .gitmodules  README.md  pyproject.toml  setup.py
rootproj/: app.py
tests/: test_some.py
